--- a/tutorial011-Numpy-LoopsAndLogicalOperators.ipynb
+++ b/tutorial011-Numpy-LoopsAndLogicalOperators.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcefb84b",
+   "id": "4c474a91",
    "metadata": {},
    "source": [
     "Array can also have more dimensions, say 2:"
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2b0d37e",
+   "id": "468af11d",
    "metadata": {},
    "source": [
     "The numpy function emnabled the elements in each dimension to be multipled by 2. "
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9b87bc7b",
+   "id": "0dbe8c9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1834,10 +1834,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "5e823fba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "logical_array.all()"
    ]
@@ -1856,10 +1867,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "4fc09ff0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False,  True, False, False, False]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "array_one = np.random.randn(1,5) > 0;\n",
     "array_two = np.random.randn(1,5) > 0;\n",
@@ -1876,10 +1898,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "14883fd6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (1,6) (1,5) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [60]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m vector_one \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrandn(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m6\u001b[39m) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m;\n\u001b[1;32m      2\u001b[0m vector_two \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrandn(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m5\u001b[39m) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m;\n\u001b[0;32m----> 3\u001b[0m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlogical_and\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvector_one\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvector_two\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (1,6) (1,5) "
+     ]
+    }
+   ],
    "source": [
     "vector_one = np.random.randn(1,6) > 0;\n",
     "vector_two = np.random.randn(1,5) > 0;\n",
@@ -1896,10 +1930,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "71b175dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True, False, False, False]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vector_one = np.random.randn(1,5) > 0;\n",
     "vector_two = np.random.randn(1,5) > 0;\n",
@@ -1908,10 +1953,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "c046dd27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True, False,  True,  True,  True]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vector_one = np.random.randn(1,5) > 0;\n",
     "vector_two = np.random.randn(1,5) > 0;\n",
