--- a/tutorial011-Numpy-Introduction.ipynb
+++ b/tutorial011-Numpy-Introduction.ipynb
@@ -46,7 +46,13 @@
    "source": [
     "NumPy is the fundamental `library` for mathematical operations and computations in Python. \n",
     "\n",
-    "The NumPy array is a multidimensional array object. A variety of fast operations on arrays are provided by NumPy. These include operations that are mathematical, logical, shape manipulation, sorting, selecting, I/O, discrete Fourier transforms, basic linear algebra, basic statistical operations, random simulation and much more. \n",
+    "The NumPy library provides a series of objects that can be used to store data (represent the numbers in a dataset for Python) and a series of methods to analyze data (provide operations that can compute, say the mean or the standard deviation of some numbers in a dataset).\n",
+    "\n",
+    "The NumPy `array` is the workhorse of NumPy and we will spend quite some time with it below. The numpy array is a multidimensional array object, that means that it \n",
+    "  - (1) is an object for programming (so it has methods and proprties of an object, just like you cup holds coffee and has colors, \n",
+    "  - (2) the Numpy array can hold data and have a bunch of properties that we can look as we look at the colors on the cup. The properties of the array help us recognize and understand what is in the array and sometimes that is really important, for example, you would not want to drink from someone else's cup, would you?\n",
+    "\n",
+    "A variety of fast numerical operations on arrays are provided by NumPy. These include operations that are mathematical, logical, shape manipulation, sorting, selecting, I/O, discrete Fourier transforms, basic linear algebra, basic statistical operations, random simulation and much more. \n",
     "\n",
     "NumPy is the base of scientific computing and data science libraries such as [Pandas](https://pandas.pydata.org/) [scipy.org](https://scipy.org/), and [scikit-learn.org](https://scikit-learn.org/) among many others."
    ]
@@ -81,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "id": "42710c7c",
    "metadata": {},
    "outputs": [],
@@ -99,21 +105,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "id": "0a06fd7b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['this', 3, 'list']"
-      ]
-     },
-     "execution_count": 135,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mylist[0:3]"
    ]
@@ -138,21 +133,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "id": "24a6dbc5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['list', (4+2j), 6.66]"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mylist[2:5]"
    ]
@@ -167,21 +151,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "f32671ee",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['this', 3, 'list', (4+2j), 6.66]"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mylist[:]"
    ]
@@ -196,21 +169,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "8b1ab9a8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 3.14, 10.5, 11.13, 12.7, 4.31]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mylistHomogeneous = [2, 3.14, 10.5, 11.13, 12.7, 4.31]\n",
-    "print(mylistHomogeneous)"
+    "mylistHomogeneous = [2, 3.14, 10.5, 11.13, 12.7, 4.31]"
    ]
   },
   {
@@ -251,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "id": "43a39707",
    "metadata": {},
    "outputs": [],
@@ -269,21 +233,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "id": "26c71a2f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[8, 6.8, 4j]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.array = ([8, 6.8, 4j])\n",
-    "print(np.array)"
+    "myarr = np.array([2, 4, 6, 8, 9, 10])"
    ]
   },
   {
@@ -296,20 +251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "id": "582f0f51",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[8, 6.8, 4j, 8, 11]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "myarr = ([8, 6.8, 4j, 8, 11])\n",
     "print(myarr)"
    ]
   },
@@ -323,21 +269,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "id": "f5cffedf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[8, 6.8, 4j, 8, 11]"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myarr"
    ]
@@ -352,42 +287,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "id": "3d71ad59",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myarr[4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "id": "c363d45e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[4j, 8, 11]"
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myarr[-3:]"
    ]
@@ -406,51 +319,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "id": "687db55e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[8, 6.8, 4j, 8]\n"
-     ]
-    }
-   ],
-   "source": [
-    "np.array = ([8, 6.8, 4j, 8])\n",
-    "print(np.array)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "9eef86ca",
    "metadata": {},
    "source": [
-    "  - Create a `NumPy array` containing  `str` as datatypes.\n",
+    "  - Create a `NumPy array` containing both `str` as datatypes.\n",
     "\n",
     "  [Use the cell below to show your code]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "id": "75af8e7c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['sanya is awesome']\n"
-     ]
-    }
-   ],
-   "source": [
-    "np.array = (['sanya is awesome'])\n",
-    "print (np.array)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -463,33 +354,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "id": "a3b92752",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "mylistHomogeneous = (8, 6.8, 4j, 9)\n",
-    "myarrayHomogeneous = [8, 6.8, 4j, 9]"
+    "myArrFromList = np.array(mylistHomogeneous)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "id": "f2284fad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[8, 6.8, 4j, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(myarrayHomogeneous)"
+    "myArrFromList"
    ]
   },
   {
@@ -510,24 +390,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "id": "87a02129",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate tuple (not \"int\") to tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [165]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmylistHomogeneous\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate tuple (not \"int\") to tuple"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mylistHomogeneous + 5 #cannot perform mathematical functions with lists. "
+    "mylistHomogeneous + 5"
    ]
   },
   {
@@ -540,24 +408,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "id": "056f7707",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate list (not \"int\") to list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [166]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmyarrayHomogeneous\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"int\") to list"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "myarrayHomogeneous + 5 #One major reason we use arrays is to perform some math on the elements. Math functions can only be applied to data in arrays, not lists\n"
+    "myArrFromList + 5"
    ]
   },
   {
@@ -575,77 +431,34 @@
    "source": [
     "$\\color{blue}{\\text{Complete the following exercise.}}$\n",
     "\n",
-    "  - What happens when you add a number to a `NumPy array`? How do the content of the array change?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
-   "id": "d198f464",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.array = ([6, 7, 8, 9, 10.3, 11, 12])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "id": "0fe960fe",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 6.   7.   8.   9.  10.3 11.  12.   7. ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "arr = np.append (np.array, [7])\n",
-    "print(arr)"
+    "  - What happens when you add a number to a `NumPy array`? How do the content of the array change?\n",
+    "\n",
+    "  [Use the cell below to show answer the question]"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "3c1e2e88",
    "metadata": {},
-   "source": [
-    "This is called **appending** values to an array. "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "5a773b69",
    "metadata": {},
    "source": [
-    "  - Create a new `array` and multiply the array by a complex number:"
+    "  - Create a new `array` and multiply the array by a complex number:\n",
+    "\n",
+    "  [Use the cell below to show your code]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": null,
    "id": "81ae359b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'j' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [182]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m np\u001b[38;5;241m.\u001b[39marray \u001b[38;5;241m=\u001b[39m ([\u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m8\u001b[39m])\n\u001b[0;32m----> 2\u001b[0m d \u001b[38;5;241m=\u001b[39m \u001b[43mj\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m (np\u001b[38;5;241m.\u001b[39marray \u001b[38;5;241m*\u001b[39m d)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'j' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "np.array = ([6, 5, 4, 3, 8])\n",
-    "d = j\n",
-    "print (np.array * d)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1548,7 +1361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
